# vision-follow-robot

./: .gitignore  README.md  experiment_plan.html  todo.html  计划书-ReID锁定跟随与后续规划.md  计划书-招手召唤与多视角Demo.md
code/: README.md
code/alt_target_source/: obstacles_to_target.py  parse_zkhy_obs.py
code/control/: car_control.py  follow_controller.py
code/data_collection/: cam_collector.py
code/detection/: CMakeLists.txt  VENDOR.md  run_yolo_follow.sh  target_selector.py  yolo_follow.cpp
code/orchestration/: bms_monitor.py  gen_demo_labels.py  restore_old.sh  start_follow.sh  stop_follow.sh  web_ui.py
code/pending_updates/: README.md  car_control.py  follow_controller.py  stop_follow.sh  web_ui.py
code/perception/: ars408_can.py  disp_calib.py  lslidar_c16_udp.py  zkhy_grabber.cpp
code/training/: README_gpu.md  build_dataset.py  export_onnx.py  make_jpg_cache.py  train_follow.py
follow_data_collector/: .gitignore  README.md  collect.py  config.yaml  requirements.txt  web_ui.py
follow_data_collector/scripts/: check_camera.py  setup_can.sh  start_collector.sh
follow_data_collector/tools/: can_logger.py  inspect_can.py  preview_dataset.py  ros_camera_collector.py  sync_dataset.py
tools/: make_multiview.py  sync_phone.py
